--- a/index.html
+++ b/index.html
@@ -7,9 +7,73 @@
     <title>Document</title>
 </head>
 <body>
+    <header>
+        <nav>
+        <a href="">
+            WebStudio
+        </a>
+        <ul>
+            <li> <a href="">Студия</a></li>
+            <li><a href="">Портфолио</a></li>
+            <li><a href="">Контакты</a></li>
+            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        </ul>
+        </nav>
+    </header>
 
 <main>
+    <section>
+        <h1>Эффективные решения<br>для вашего бизнеса</br></h1>
+        <a href="">Заказать услугу</a>
+    </section>
+
+    <section>
+        <ul>
+            <li>
+                <h2>Внимание к деталям</h2>
+                <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+            </li>
+            <li>
+                <h2>Пунктуальность</h2>
+                <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+            </li>
+            <li>
+                <h2>Планирование</h2>
+                <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+            </li>
+            <li>
+                <h2>Современные технологии</h2>
+                <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+            </li>
+        </ul>
+         <h2>Чем мы занимаемся</h2>
+          <ul>
+            <li>
+                <img src="" alt="" width="370"/>
+            </li>
+            <li>
+                <img src="" alt="" width="370"/>
+            </li>
+            <li>
+                <img src="" alt="" width="370"/>
+            </li>
+        </ul>
+
+
+        <section>
+            <h2>Наша команда</h2>
+            <ul>
+                <li></li>
+            </ul>
+        </section>
     
+
+    </section>
+
+
+
+
 </main>
     
 </body>
