сделала первый проект

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,23 +9,26 @@
 <body>
     <header>
         <nav>
-        <a href="">
-            WebStudio
-        </a>
+        <a href="">WebStudio</a>
         <ul>
             <li> <a href="">Студия</a></li>
             <li><a href="">Портфолио</a></li>
             <li><a href="">Контакты</a></li>
+        </ul>
+        </nav>
+
+        <ul>
             <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
             <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
-        </nav>
+
     </header>
 
 <main>
     <section>
-        <h1>Эффективные решения<br>для вашего бизнеса</br></h1>
-        <a href="">Заказать услугу</a>
+        <h1>Эффективные решения<br> для вашего бизнеса
+    </h1>
+    <button type="button">Заказать услугу</button>
     </section>
 
     <section>
@@ -50,37 +53,52 @@
          <h2>Чем мы занимаемся</h2>
           <ul>
             <li>
-                <img src="" alt="" width="370"/>
+                <img src="./images/keyboard.jpg" alt="печать" width="370"/>
             </li>
             <li>
-                <img src="" alt="" width="370"/>
+                <img src="./images/mobile.jpg" alt="сканирование с телефона" width="370"/>
             </li>
             <li>
-                <img src="" alt="" width="370"/>
+                <img src="./images/painting.jpg" alt="графический дизайн" width="370">
             </li>
         </ul>
-
-
+    </section>
         <section>
             <h2>Наша команда</h2>
             <ul>
-                <li></li>
+                <li>
+                    <img src="./images/igor.jpg" alt="Игорь Демьяненко дизайнер" width="270">
+                    <h3>Игорь Демьяненко</h3>
+                    <p>Product Designer</p>
+                </li>
+                <li>
+                    <img src="./images/olga.jpg" alt="Ольга Репина фронтенд разработчик" width="270">
+                    <h3>Ольга Репина</h3>
+                    <p>Frontend Developer</p>
+                </li>
+                <li>
+                    <img src="./images/nikolay.jpg" alt="Николай Тарасов отдел маркетинга" width="270">
+                    <h3>Николай Тарасов</h3>
+                    <p>Marketing</p>
+                </li>
+                <li>
+                    <img src="./images/michael.jpg" alt="Михаил Ермаков дизайнер" width="270">
+                    <h3>Михаил Ермаков</h3>
+                    <p>UI Designer</p>
+                </li>
             </ul>
         </section>
-    
-
-    </section>
-
-
-
-
 </main>
-    
-</body>
 
 
 <footer>
-
+    <a href="">WebStudio</a>
+    <ul>
+        <li><address>г. Киев, пр-т Леси Украинки, 26</address> </li>
+        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li> 
+    </ul>
 </footer>
 
+</body>
 </html> 
