--- a/index.html
+++ b/index.html
@@ -5,55 +5,64 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+        rel="stylesheet"
+        />
+    <link rel="stylesheet" href="css/styles.css"/>
 </head>
 <body>
-    <header>
+    <header class="page-header">
         <nav>
-        <a href="">WebStudio</a>
-        <ul>
-            <li> <a href="">Студия</a></li>
-            <li><a href="">Портфолио</a></li>
-            <li><a href="">Контакты</a></li>
+        <a href="./index.html" class="logo"><span class="logo-one">Web</span><span class="logo-half">Studio</span>
+        </a>
+
+        <ul class="site-nav">
+            <li> <a href="" class="link current">Студия</a></li>
+            <li><a href="./portfolio.html" class="link">Портфолио</a></li>
+            <li><a href="" class="link">Контакты</a></li>
         </ul>
         </nav>
 
-        <ul>
-            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        <ul class="info">
+            <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
+            <li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
         </ul>
 
     </header>
 
 <main>
-    <section>
-        <h1>Эффективные решения<br> для вашего бизнеса
+    <section class="hero">
+        <h1 class="hero-title">ЭФФЕКТИВНЫЕ РЕШЕНИЯ ДЛЯ ВАШЕГО БИЗНЕСА
     </h1>
-    <button type="button">Заказать услугу</button>
+    <button type="button" class="button primary">Заказать услугу</button>
     </section>
 
-    <section>
-        <ul>
+
+
+    <section class="feature">
+        <ul class="feature-list">
             <li>
-                <h3>Внимание к деталям</h3>
-                <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+                <h3 class="title">Внимание к деталям</h3>
+                <p class="text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
             </li>
             <li>
                 <h3>Пунктуальность</h3>
-                <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+                <p class="text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
             </li>
             <li>
                 <h3>Планирование</h3>
-                <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+                <p class="text"> Равным образом консультация с широким активом в значительной степени обуславливает.</p>
             </li>
             <li>
                 <h3>Современные технологии</h3>
-                <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+                <p class="text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
             </li>
         </ul>
     </section>
 
     <section>
-         <h2>Чем мы занимаемся</h2>
+         <h2 class="caption">Чем мы занимаемся</h2>
           <ul>
             <li>
                 <img src="./images/keyboard.jpg" alt="печать" width="370"/>
@@ -66,41 +75,46 @@
             </li>
         </ul>
     </section>
-        <section>
-            <h2>Наша команда</h2>
-            <ul>
+
+
+
+
+        <section class="comand">
+            <h2 class="topic">Наша команда</h2>
+            <ul class=>
                 <li>
                     <img src="./images/igor.jpg" alt="Игорь Демьяненко дизайнер" width="270">
-                    <h3>Игорь Демьяненко</h3>
-                    <p>Product Designer</p>
+                    <h3 class="topic-text">Игорь Демьяненко</h3>
+                    <p class="text-comand">Product Designer</p>
                 </li>
                 <li>
                     <img src="./images/olga.jpg" alt="Ольга Репина фронтенд разработчик" width="270">
-                    <h3>Ольга Репина</h3>
-                    <p>Frontend Developer</p>
+                    <h3 class="topic-text">Ольга Репина</h3>
+                    <p class="text-comand"> Frontend Developer</p>
                 </li>
                 <li>
                     <img src="./images/nikolay.jpg" alt="Николай Тарасов отдел маркетинга" width="270">
-                    <h3>Николай Тарасов</h3>
-                    <p>Marketing</p>
+                    <h3 class="topic-text">Николай Тарасов</h3>
+                    <p class="text-comand">Marketing</p>
                 </li>
                 <li>
                     <img src="./images/michael.jpg" alt="Михаил Ермаков дизайнер" width="270">
-                    <h3>Михаил Ермаков</h3>
-                    <p>UI Designer</p>
+                    <h3 class="topic-text">Михаил Ермаков</h3>
+                    <p class="text-comand">UI Designer</p>
                 </li>
             </ul>
         </section>
 </main>
 
 
-<footer>
-    <a href="">WebStudio</a>
+<footer class="page-footer">
+    <a href="./index.html" class="logo"><span class="logo-one">Web</span><span class="logo-footer">Studio</span>
+    </a>
     <address>
-    <ul> 
+    <ul class="adress"> 
         <li>г. Киев, пр-т Леси Украинки, 26</li>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li> 
+        <li class="info"><a href ="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
+        <li class="info"><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li> 
     </ul>
     </address>
 </footer>
