--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <header class="page-header">
         <nav>
-        <a href="./index.html" class="logo"><span class="logo-one">Web</span><span class="logo-half">Studio</span>
+        <a href="./index.html" class="logo"><span class="logo-first">Web</span><span class="logo-half">Studio</span>
         </a>
 
         <ul class="site-nav">
@@ -43,19 +43,19 @@
     <section class="feature">
         <ul class="feature-list">
             <li>
-                <h3 class="title">Внимание к деталям</h3>
+                <h3 class="title">ВНИМАНИЕ К ДЕТАЛЯМ</h3>
                 <p class="text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
             </li>
             <li>
-                <h3>Пунктуальность</h3>
+                <h3 class="title">ПУНКТУАЛЬНОСТЬ</h3>
                 <p class="text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
             </li>
             <li>
-                <h3>Планирование</h3>
+                <h3 class="title">ПЛАНИРОВАНИЕ</h3>
                 <p class="text"> Равным образом консультация с широким активом в значительной степени обуславливает.</p>
             </li>
             <li>
-                <h3>Современные технологии</h3>
+                <h3 class="title">СОВРЕМЕННЫЕ ТЕХНОЛОГИИ</h3>
                 <p class="text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
             </li>
         </ul>
@@ -108,13 +108,13 @@
 
 
 <footer class="page-footer">
-    <a href="./index.html" class="logo"><span class="logo-one">Web</span><span class="logo-footer">Studio</span>
+    <a href="./index.html" class="logo"><span class="logo-first">Web</span><span class="logo-footer">Studio</span>
     </a>
     <address>
     <ul class="adress"> 
         <li>г. Киев, пр-т Леси Украинки, 26</li>
-        <li class="info"><a href ="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
-        <li class="info"><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li> 
+        <li><a href ="mailto:info@devstudio.com" class="link-foot">info@devstudio.com</a></li>
+        <li><a href="tel:+380961111111" class="link-foot">+38 096 111 11 11</a></li> 
     </ul>
     </address>
 </footer>
