--- a/portfolio.html
+++ b/portfolio.html
@@ -14,7 +14,7 @@
 <body>
     <header class="page-header">
         <nav>
-            <a href="./index.html" class="logo"><span class="logo-one">Web</span><span class="logo-half">Studio</span>
+            <a href="./index.html" class="logo"><span class="logo-first">Web</span><span class="logo-half">Studio</span>
             </a>
             <ul class="site-nav">
                 <li> <a href="./index.html" class="link">Студия</a></li>
@@ -52,49 +52,67 @@
         </ul>
         <ul class="work-list">
             <li>
+                <a class="work-list-link" href="">
                 <img src="./images/tehnokryak.jpg" alt="ноутбук" width="370">
-                <h2 class="wotk-list-title">Технокряк</h2>
+                <h2 class="work-list-title">Технокряк</h2>
                 <p class="work-list-text">Веб-сайт</p>
+                </a>
             </li>
             <li>
+                <a class="work-list-link" href="">
                 <img src="./images/poster.jpg" alt="постер" width="370">
-                <h2 class="work-list-title">Inspiration has no Borders</h2>
+                <h2 class="work-list-title">Постер New Orlean vs Golden Star</h2>
                 <p class="work-list-text">Дизайн</p>
+                </a>
             </li>
             <li>
+                <a class="work-list-link" href="">
                 <img src="./images/seafood.jpg" alt="лого ресторана" width="370">
                 <h2 class="work-list-title">Ресторан Seafood</h2>
                 <p class="work-list-text">Приложение</p>
+                </a>
             </li>
             <li>
+                <a  class="work-list-link"href="">
                 <img src="./images/prime.jpg" alt="фото наушников" width="370">
                 <h2 class="work-list-title">Проект Prime</h2>
                 <p class="work-list-text">Маркетинг</p>
+                </a>
             </li>
             <li>
+                <a class="work-list-link" href="">
                 <img src="./images/boxes.jpg" alt="коробочки" width="370">
                 <h2 class="work-list-title">Проект Boxes</h2>
                 <p class="work-list-text">Приложение</p>
+                </a>
             </li>
             <li>
+                <a class="work-list-link" href="">
                 <img src="./images/inspiration.jpg" alt="компьютер" width="370">
                 <h2 class="work-list-title">Inspiration has no Borders</h2>
                 <p class="work-list-text">Веб-сайт</p>
+                </a>
             </li>
             <li>
+                <a class="work-list-link" href="">
                 <img src="./images/limited.jpg" alt="книга" width="370">
                 <h2 class="work-list-title">Издание Limited Edition</h2>
                 <p class="work-list-text">Дизайн</p>
+                </a>
             </li>
             <li>
+                <a class="work-list-link" href="">
                 <img src="./images/lab.jpg" alt="проект" width="370">
                 <h2 class="work-list-title">Проект LAB</h2>
                 <p class="work-list-text">Маркетинг</p>
+                </a>
             </li>
             <li>
+                <a class="work-list-link" href="">
                 <img src="./images/growing.jpg" alt="печать на ноутбуке" width="370">
                 <h2 class="work-list-title">Growing Business</h2>
                 <p class="work-list-text">Приложение</p>
+                </a>
             </li>
         </ul>
         </section>
@@ -103,13 +121,13 @@
 
 
     <footer class="portfolio-footer">
-        <a href="./index.html" class="logo"><span class="logo-one">Web</span><span class="logo-footer">Studio</span>
+        <a href="./index.html" class="logo"><span class="logo-first">Web</span><span class="logo-footer">Studio</span>
         </a>
     <address>
         <ul class="adress">
             <li>г. Киев, пр-т Леси Украинки, 26</li>
-            <li class="info"><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
-            <li class="info"><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
+            <li ><a href="mailto:info@devstudio.com" class="link-foot">info@devstudio.com</a></li>
+            <li ><a href="tel:+380961111111" class="link-foot">+38 096 111 11 11</a></li>
         </ul>
     </address>
         </footer>
